# KrakenD-CPP

./: .env  CMakeLists.txt  README.md  krakend.json
include/common/: app_lifecycle.hpp
include/services/: payments_service.hpp  users_service.hpp
include/transports/: grpc_client.hpp  http_client.hpp  http_server.hpp
include/validator/: env_validator.hpp  validator.hpp
proto/: krakend.proto
src/: main.cpp
src/common/: app_lifecycle.cpp  env_validator.cpp
src/services/: payments_service.cpp  users_service.cpp
src/transport/: grpc_client.cpp  http_client.cpp  http_server.cpp
